# contract-client

./: Cargo.toml  README.md  adder-deployed.wasm
src/: chainx_rpc.rs  main.rs
