[package]
name = "contract_client"
version = "0.1.0"
authors = ["Chainpool <chainx.org>"]

[dependencies]
jsonrpc-client-core = "0.5.0"
keccak-hash = "0.1"
url = "1.2.0"
parking_lot = "0.7"
parity-codec = "2.0"
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git" }
chainx-primitives = { path = "../ChainX/primitives" }
chainx-runtime = { path = "../ChainX/runtime" }
srml-contract = { git = "https://github.com/chainpool/substrate" }
srml-system = { git = "https://github.com/chainpool/substrate" }
srml-sudo = { git = "https://github.com/chainpool/substrate" }
srml-consensus = { git = "https://github.com/chainpool/substrate" }
srml-support = { git = "https://github.com/chainpool/substrate" }
substrate-primitives = { git = "https://github.com/chainpool/substrate" }
sr-primitives = { git = "https://github.com/chainpool/substrate" }
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.6"
hex = "*"
