[package]
name = "contract_client"
version = "0.1.0"
authors = ["Chainpool <chainx.org>"]

[dependencies]
jsonrpc-client-core = "0.5.0"
keccak-hash = "0.1"
url = "1.2.0"
parking_lot = "0.7"
parity-codec = "3.0"
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git" }
node-primitives = { path = "../substrate/node/primitives" }
node-runtime = { path = "../substrate/node/runtime" }
srml-contract = { path = "../substrate/srml/contract" }
srml-system = { path = "../substrate/srml/system" }
srml-support = { path = "../substrate/srml/support" }
substrate-primitives = { path = "../substrate/core/primitives" }
sr-primitives = { path = "../substrate/core/sr-primitives" }
sr-io = { path = "../substrate/core/sr-io" }
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.6"
hex = "*"
